--- a/css/gps/gps2-1.css
+++ b/css/gps/gps2-1.css
@@ -1,3 +1,48 @@
-/** {
-  color: red;
-}*/
+body {
+  margin: 0;
+  font-family: "Helvetica", sans-serif;
+  font-size: .8em;
+}
+
+header {
+  margin: 0;
+}
+
+h1 {
+  font-size: 1.5em;
+  text-align: center;
+}
+
+h2 {
+  font-size: 1em;
+}
+
+section {
+  display: inline-block;
+  vertical-align: top;
+  width: 40%;
+}
+
+.column-1 {
+  padding: 20px;
+}
+
+.column-2 {
+  padding: 20px;
+}
+
+a:hover {
+  color: pink;
+}
+
+summary {
+  background-color: grey;
+}
+
+code {
+  background-color: white;
+}
+
+footer {
+  text-align: center;
+}
