Ugly but it works

--- a/web_dev/sinatra_templating/views/campuses.erb
+++ b/web_dev/sinatra_templating/views/campuses.erb
@@ -37,21 +37,19 @@
   </table>
 
   <form action="/campuses" method="POST">
-    <p>What campus would you like to view?</p>
-    <!-- <input type="text" name="name" placeholder="Name"> -->
-    <input type="text" name="campus" placeholder="Campus">
-    <!-- <input type="text" name="age" placeholder="Age"> -->
+    <p>Please enter the campus abbreviation you would like to view</p>
+    <!-- <input type="text" name="campus" placeholder="Campus">
     <button type="submit">View</button>
-  </form>
+  </form> -->
 
-  <!--
-  <select name="Campuses">
-    <option value="SF"></option>
+
+  <select name="campus">
+    <option value="SF">San Francisco</option>
     <option value="SD">San Diego</option>
     <option value="SEA">Seattle</option>
     <option value="CHI">Chicago</option>
     <option value="NYC">New York City</option>
   </select>
-</form> -->
+</form>
 </body>
 </html>
